2A/05_Projet_GL/src/test/deca/context/valid/complet/73_method_call_super.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {
    int x ; 
    int getX() {
        return x ; 
    }
}

class B extends A {

}

{
    B b = new B();
    int i = b.getX();
}
