2A/05_Projet_GL/src/test/deca/context/invalid/complet/62_method_call_sig_diff_arg1.deca
// Description :
//   Appelle de methode avce de type non compatible partie gauche
// Resultats :
//    ligne 18 :  le boolean ne peut pas être affecté à int
// Historique : 
//  cree le 16/01/2024

class A {
    int add(int a , int b) {
        return a + b ; 
    }
}


{
    A a = new A();

    int res = a.add(true , 1);
}